2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-09  Rajkumar Sivasamy <rajkumar.siva@wipro.com>

	* mime-edit-dialog.c: Display the list of applications installed 
	  in the system for a mime type rather than displaying all the 
	  applications associated to that mime type.
	  Fixes bug 94757

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=93279
	* file-types-properties.glade : missing & conflicting accerators.

	http://bugzilla.gnome.org/show_bug.cgi?id=93211
	* file-types-capplet.c (edit_count_cb) : delete.
	(selection_count_cb) : rename from remove_count_cb.
	(selection_changed_cb) : simplify code, disable edit button for
	  catagories.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-09-09  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (update_sensitivity) : As FCrozat points out
	  use category default has been lobotomized.

2002-08-31  Jacob Berkman  <jacob@krunk.local.>

	* Makefile.am (gnome_file_types_properties_LDADD): link against -lpopt

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* file-types.desktop.in: Fix the desktop file so that it
	validates.

2002-08-19  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=88354
	* file-types.desktop.in : minor update

2002-08-10  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : fix missed capitalization for the
	ui-review.

2002-08-07  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : Be extra anal, just
	  in case the db is corrupt.

2002-08-05  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : work around